# shop_bot

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: test.yaml
scripts/: install.sh
src/: app.py  config.py  exceptions.py  middlewares.py  settings.toml  tasks_runner.py
src/backup/: handlers.py  states.py  tasks.py  views.py
src/cart/: callback_data.py  exceptions.py  handlers.py  models.py  repositories.py  services.py  states.py  tasks.py  views.py
src/categories/: __init__.py  callback_data.py  models.py  repositories.py  states.py  views.py
src/common/: filters.py  handlers.py  models.py  services.py  views.py
src/database/: queries.py  session.py  setup.py
src/mailing/: exceptions.py  handlers.py  services.py  states.py  views.py
src/middlewares/: banned_user_middleware.py
src/models/: __init__.py  categories.py  products.py  replies.py  shop_info.py  support_tickets.py  users.py
src/payments/: callback_data.py  exceptions.py  handlers.py  models.py  services.py  states.py  views.py
src/products/: callback_data.py  exceptions.py  models.py  repositories.py  services.py  states.py  views.py
src/responses/: backup.py  balance.py  base.py  category_management.py  payments.py  product_management.py  products.py  profile.py  shop_management.py  support.py  users.py
src/sales/: models.py  repositories.py  views.py
src/services/: alerts.py  files.py  notifications.py  product_services.py  rate_limit.py  time_utils.py  validators.py
src/shop_info/: callback_data.py  handlers.py  repositories.py  states.py  views.py
(+326 files in other folders)
