[tool.poetry]
name = "shop_bot"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
coinbase-commerce = "^1.0.1"
aiogram = "^2.25.1"
pydantic = "^1.9.2"
python-dotenv = "^0.21.0"
toml = "^0.10.2"
typing-extensions = "^4.6.3"
SQLAlchemy = "^2.0.15"
APScheduler = "^3.9.1"
tzlocal = "^4.2"
structlog = "^23.1.0"
emoji = "^2.5.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
